# website-mcp

./: .env.example  .gitignore  Dockerfile  MCP_INSPECTOR_READY.md  README.md  github_mcp.py  pyproject.toml  requirements.txt
